yatai_Bentoml on k8s/yamls/service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: model-lb
spec:
  type: LoadBalancer
  ports:
    - port: 3000
#      targetPort: 31000
      protocol: TCP
  selector:
    app: xgb-model
